Assignment B Problem 2. Implement setting appointment notes.

--- a/src/assignmentB/appointment-notes.json
+++ b/src/assignmentB/appointment-notes.json
@@ -1,7 +1,10 @@
 {
-  "19April2018": "some notes",
-  "20April2018": "blah blah blah",
-  "21April2018": "yard work",
-  "22April2018": "the day before monday",
-  "23April2018": "the best day of the week"
+  "13Sep2017": "asdfadsgf",
+  "20Dec2017": "dfgsfghsfh",
+  "6Feb2018": "asdfasdfg",
+  "19Apr2018": "asdf",
+  "20Apr2018": "asdfq634u5",
+  "20Jul2018": "asdfadfsg",
+  "25Oct2018": "asdfasdfasg",
+  "27Oct2018": "asdfasdfg\n\n2345\n\ndgdf\n\n1) do stuff\n\n2) undo stuff\n\n3) more stuff"
 }
