Assignment B Problem 2. Handle null when sorting json list.

--- a/src/assignmentB/appointment-notes.json
+++ b/src/assignmentB/appointment-notes.json
@@ -2,8 +2,10 @@
   "13Sep2017": "asdfadsgf",
   "20Dec2017": "dfgsfghsfh",
   "6Feb2018": "asdfasdfg",
+  "9Apr2018": "seom more notes\nsp",
   "19Apr2018": "asdf",
   "20Apr2018": "asdfq634u5",
+  "21Apr2018": "sdgh35667547457",
   "20Jul2018": "asdfadfsg",
   "25Oct2018": "asdfasdfasg",
   "27Oct2018": "asdfasdfg\n\n2345\n\ndgdf\n\n1) do stuff\n\n2) undo stuff\n\n3) more stuff"
